fix the upload file info alignment issue.

--- a/packages/components/mc-upload/styles/mc-file-list.scss
+++ b/packages/components/mc-upload/styles/mc-file-list.scss
@@ -146,6 +146,7 @@ ul {
     .file-info {
       max-width: 386px;
       word-break: break-all;
+      flex: 1;
       .label {
         margin-bottom: 8px;
         font-size: 12px;
